# coursework_oop

./: .gitignore  README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_tests.py  test_report.txt
data/: aeroplanes.json.tmp
src/aeroplane_tracker/: __init__.py  abstract_api.py  abstract_storage.py  aeroplane.py  api_client.py  json_storage.py  user_interface.py
tests/: test_aeroplane.py  test_api_client.py  test_json_storage.py  test_user_interface.py  test_user_interface_extended.py
